@startuml

'/*
' * UCF COP3330 Fall 2021 Assignment 4 Solutions
' * Copyright 2021 Jeanne Moore
' */

class Employee {
    - firstName: String
    - lastName: String
    - salary: String
    + setFirstName(String fName): void
    + setLastName(String lName): void
    + setSalary(String salary): void
    + getFirstName(): String
    + getLastName(): String
    + getSalary(): String
}


class Parser {
    -readFromFile(String fileName): List
    +parseInput(String fileName): List
    +printList(list): void
}


class Solution42 {
    main()
    new Parser();
}

Solution42 --o Parser

Parser --o Employee
@enduml